Fixed about column wrapping issue

--- a/assets/css/compiled/theme.css
+++ b/assets/css/compiled/theme.css
@@ -745,6 +745,8 @@ aside.cta-quote span.quote {
 }
 @media (min-width: 992px) {
   .services .media {
+    margin: 0 auto;
+    width: 320px;
     margin-bottom: 0;
   }
 }
